--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-4gSbSkeZp9N3nICroX_OQCjtFg4itw0"></script>
+  <script type="text/javascript">
+    let useHtml = // ...
+    if(useHtml) {
+      window.flutterWebRenderer = "html";
+    } else {
+      window.flutterWebRenderer = "canvaskit";
+    }
+  </script>
   <script>
-    var serviceWorkerVersion = '4218557852';
+    var serviceWorkerVersion = '2692810518';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
